Auto-resolve with overwrite 465-rhel7
Signed-off-by: Kevin Mittman <kmittman@nvidia.com>

--- a/dkms-nvidia.conf
+++ b/dkms-nvidia.conf
@@ -15,3 +15,6 @@ DEST_MODULE_LOCATION[2]="/extra"
 
 BUILT_MODULE_NAME[3]="nvidia-uvm"
 DEST_MODULE_LOCATION[3]="/extra"
+
+BUILT_MODULE_NAME[4]="nvidia-peermem"
+DEST_MODULE_LOCATION[4]="/extra"
